test/signal/negative/stream_to_signal_negative.ml
module Signal = Eta_signal.Make_no_error ()

let _must_not_typecheck = Signal.Stream.to_signal
